# aws-sdk

./: .gitignore  .travis.yml  AWS.hs  Example.hs  LICENSE  README.md  api-list.csv  aws-sdk.cabal  ec2api.csv
AWS/: Class.hs  CloudWatch.hs  Credential.hs  EC2.hs  ELB.hs  RDS.hs  Types.hs  Util.hs
AWS/CloudWatch/: Alarm.hs  Internal.hs  Metric.hs  Types.hs
AWS/EC2/: Acl.hs  Address.hs  AvailabilityZone.hs  Class.hs  ConversionTask.hs  Convert.hs  Image.hs  Instance.hs  Internal.hs  KeyPair.hs  Metadata.hs  NetworkInterface.hs  NetworkInterfaceAttribute.hs  Params.hs  Parser.hs  PlacementGroup.hs  Query.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  Subnets.hs  Tag.hs  Types.hs  Util.hs  Utils.hs  VPC.hs  Volume.hs
AWS/EC2/Parser/: Internal.hs
AWS/EC2/Types/: Acl.hs  Address.hs  AvailabilityZone.hs  Common.hs  ConversionTask.hs  Image.hs  Instance.hs  KeyPair.hs  NetworkInterface.hs  PlacementGroup.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  Subnets.hs  Tag.hs  VPC.hs  Volume.hs
AWS/ELB/: Internal.hs  LoadBalancer.hs  Types.hs
AWS/Lib/: Convert.hs  FromText.hs  Parser.hs  Query.hs
AWS/RDS/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  Internal.hs  OptionGroup.hs  Tag.hs  Types.hs  Util.hs
AWS/RDS/Types/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  OptionGroup.hs  Tag.hs
Cloud/: AWS.hs
Cloud/AWS/: Class.hs  CloudWatch.hs  EC2.hs  ELB.hs  RDS.hs  Util.hs
Cloud/AWS/CloudWatch/: Alarm.hs  Internal.hs  Metric.hs  Types.hs
Cloud/AWS/EC2/: Account.hs  Acl.hs  Address.hs  AvailabilityZone.hs  ConversionTask.hs  Image.hs  Instance.hs  Internal.hs  KeyPair.hs  Metadata.hs  NetworkInterface.hs  NetworkInterfaceAttribute.hs  Params.hs  PlacementGroup.hs  Query.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  Subnets.hs  Tag.hs  Types.hs  Util.hs  VPC.hs  Volume.hs
Cloud/AWS/EC2/Types/: Account.hs  Acl.hs  Address.hs  AvailabilityZone.hs  Common.hs  ConversionTask.hs  Image.hs  Instance.hs  KeyPair.hs  NetworkInterface.hs  PlacementGroup.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  SpotInstance.hs  Subnets.hs  Tag.hs  VPC.hs  Volume.hs
Cloud/AWS/ELB/: Internal.hs  LoadBalancer.hs  Types.hs
Cloud/AWS/Lib/: FromText.hs  Parser.hs  Query.hs  ToText.hs
Cloud/AWS/RDS/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  Internal.hs  OptionGroup.hs  Tag.hs  Util.hs
Cloud/AWS/RDS/Types/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  OptionGroup.hs  Tag.hs
Tests/: Main.hs  PropExample.hs  SpecExample.hs  main.hs
Tests/AWS/: EC2Tests.hs  Util.hs
Tests/AWS/EC2/: InstanceTests.hs  Util.hs  VPCTests.hs
Tests/AWSTests/: EC2Tests.hs  ELBTests.hs  RDSTests.hs  Util.hs
Tests/AWSTests/EC2Tests/: AddressTests.hs  AvailabilityZoneTests.hs  ConversionTaskTests.hs  ImageTests.hs  InstanceTests.hs  KeyPairTests.hs  NetworkInterfaceAttributeTests.hs  NetworkInterfaceTests.hs  PlacementGroupTests.hs  RegionTests.hs  RouteTableTests.hs  RouteTests.hs  SecurityGroupTests.hs  SnapshotTests.hs  SubnetsTests.hs  TagTests.hs  Util.hs  VPCTests.hs  VolumeTests.hs
Tests/AWSTests/ELBTests/: LoadBalancerTests.hs
Tests/AWSTests/RDSTests/: DBParameterGroupTests.hs  DBSecurityGroupTests.hs  DBSnapshotTests.hs  Util.hs
aws-sdk-cloudwatch/: .gitignore  aws-sdk-cloudwatch.cabal
aws-sdk-core/: aws-sdk-core.cabal
aws-sdk-core/Cloud/AWS/: Class.hs
aws-sdk-ec2/: aws-sdk-ec2.cabal
aws-sdk-elb/: aws-sdk-elb.cabal
aws-sdk-lib/: aws-sdk-lib.cabal
aws-sdk-lib/Cloud/AWS/Lib/: Query.hs
aws-sdk-rds/: aws-sdk-rds.cabal
example/: Example.hs
src/: AWS.hs
src/AWS/EC2/: Types.hs
test/: EC2Tests.hs
test/CloudWatchTests/: AlarmTests.hs  Util.hs
test/EC2Tests/: AccountTests.hs  ImageTests.hs  InstanceTests.hs  KeyPairTests.hs  NetworkInterfaceAttributeTests.hs  Util.hs  VPCTests.hs
test/ELBTests/: LoadBalancerTests.hs  Util.hs
test/RDSTests/: DBInstanceTests.hs  DBSecurityGroupTests.hs  DBSnapshotTests.hs  OptionGroupTests.hs  Util.hs
tests/: Main.hs
tests/AWSTests/: CloudWatchTests.hs  EC2Tests.hs  RDSTests.hs  Util.hs
tests/AWSTests/CloudWatchTests/: AlarmTests.hs  MetricTests.hs  Util.hs
tests/AWSTests/EC2Tests/: AclTests.hs  AddressTests.hs  AvailabilityZoneTests.hs  ConversionTaskTests.hs  ImageTests.hs  InstanceTests.hs  KeyPairTests.hs  NetworkInterfaceAttributeTests.hs  NetworkInterfaceTests.hs  PlacementGroupTests.hs  RegionTests.hs  RouteTableTests.hs  RouteTests.hs  SecurityGroupTests.hs  SnapshotTests.hs  SubnetsTests.hs  TagTests.hs  Util.hs  VPCTests.hs  VolumeTests.hs
tests/AWSTests/ELBTests/: LoadBalancerTests.hs  Util.hs
tests/AWSTests/RDSTests/: DBInstanceTests.hs  DBParameterGroupTests.hs  DBSecurityGroupTests.hs  DBSnapshotTests.hs  DBSubnetGroupTests.hs  EventSubscriptionTests.hs  EventTests.hs  OptionGroupTests.hs  TagTests.hs  Util.hs
