name:                aws-sdk
version:             1.0.0
synopsis:            AWS SDK for Haskell
description: AWS (Amazon Web Services) sdk for Haskell.
             .
             This library closesly follows the official sdk.
             To find more documentation, you can lookup functions in the official sdk docs for other languages:
             <http://docs.amazonwebservices.com/AWSJavaSDK/latest/javadoc/com/amazonaws/services/ec2/model/DescribeInstancesRequest.html>

license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura <yunomu@gmail.com>
                   , Seizan Shimazaki <seizans@gmail.com>
                   , Daisuke Matsumoto <dai@daimatz.net>
                   , Shohei Yasutake <amutake.s@gmail.com>
                   , eagletmt <eagletmt@gmail.com>
                   , HATATANI Shinta <gamaguchi@gmail.com>
maintainer:          Yusuke Nomura <yunomu@gmail.com>
homepage:            https://github.com/worksap-ate/aws-sdk
copyright:           AWS SDK for Haskell Developers
category:            Cloud, AWS, Distributed Computing
build-type:          Simple
cabal-version:       >=1.8

flag debug
    description: enable debug logging
    default: False

library
  exposed-modules:   Cloud.AWS
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
  if flag(debug)
      cpp-options: -DDEBUG

  extensions: OverloadedStrings
  build-depends:     base >= 4 && < 5
                   , aws-sdk-core
                   , aws-sdk-lib
                   , aws-sdk-ec2
                   , aws-sdk-elb
                   , aws-sdk-rds
                   , aws-sdk-cloudwatch

source-repository head
    type:            git
    location:        git://github.com/worksap-ate/aws-sdk.git

test-suite test-ec2
    type:              exitcode-stdio-1.0
    main-is:           EC2Tests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , aws-sdk-ec2
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , bytestring
                 , base64-bytestring
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-vpc
    type:              exitcode-stdio-1.0
    main-is:           VPCTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , aws-sdk-ec2
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , bytestring
                 , base64-bytestring
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-rds
    type:              exitcode-stdio-1.0
    main-is:           RDSTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , aws-sdk-ec2
                 , aws-sdk-rds
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-elb
    type:              exitcode-stdio-1.0
    main-is:           ELBTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , aws-sdk-ec2
                 , aws-sdk-elb
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-cw
    type:              exitcode-stdio-1.0
    main-is:           CloudWatchTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , aws-sdk-cloudwatch
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey
