name:                aws-sdk-elb
version:             1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
category:            Distributed Computing, Cloud, AWS
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Cloud.AWS.ELB
                     , Cloud.AWS.ELB.Types
  other-modules:       Cloud.AWS.ELB.Internal
                     , Cloud.AWS.ELB.LoadBalancer
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base ==4.*
                     , aws-sdk-lib
                     , aws-sdk-core
                     , http-conduit >= 2.0.0
                     , resourcet >= 1.1
                     , mtl
                     , transformers
                     , text
                     , aws-sdk-text-converter >=0.3
                     , time
                     , bytestring
                     , aws-sdk-xml-unordered >=0.3
